<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <include
        layout="@layout/dilemma_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="480dp"
        android:background="@drawable/image_25"
        android:src="@drawable/image_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/photo"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="480dp"
        android:src="@mipmap/ic_btn_edit"
        android:background="@drawable/circle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/edit" />

    <EditText
        android:inputType="text"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="202dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="408dp"
        android:background="@drawable/rounded_text"
        android:gravity="center"
        android:text="@string/test_user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_edit"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        android:scaleType="fitCenter"
        android:contentDescription="@string/edit_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="349dp"
        android:fontFamily="@font/montserrat"
        android:lineHeight="29dp"
        android:text="@string/statistics"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p"
        android:textColor="#000000"/>

    <TextView
        android:layout_marginStart="45dp"
        android:layout_marginTop="327dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="283dp"
        android:text="@string/dillemas_asked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564"
        android:background="@drawable/rounded_text"
        style="@style/setting_dillema_text"/>

    <TextView
        android:layout_marginStart="45dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="243dp"
        android:text="@string/dillemas_answered"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_text"
        style="@style/setting_dillema_text"/>

    <TextView
        style="@style/rounded_text"
        android:layout_marginStart="75dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/rounded_text"
        android:backgroundTint="#72AAFF"
        android:gravity="center"
        android:text="@string/connect_via_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/rounded_text"
        android:layout_marginStart="105dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/rounded_text"
        android:backgroundTint="#FF2929"
        android:gravity="center"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/btnHome"
        style="@style/main_buttons"
        android:layout_marginStart="45dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/home"/>

    <ImageButton
        android:id="@+id/btnProfile"
        style="@style/main_buttons"
        android:layout_marginStart="165dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/profile"/>

    <ImageButton
        android:id="@+id/btnSetting"
        style="@style/main_buttons"
        android:layout_marginStart="285dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/settings"/>


</androidx.constraintlayout.widget.ConstraintLayout>