<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <include
        android:id="@+id/include"
        layout="@layout/dilemma_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_btn_createDilemma_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="604dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/btn_back_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="518dp"
        android:fontFamily="@font/montserrat"
        android:lineHeight="17dp"
        android:text="Choose type:"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_createDilemma_yesno"
        style="@style/create_dilemma_btns"
        android:layout_marginStart="75dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="476dp"
        android:text="@string/btn_yes_no_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_createDilemma_severalVariants"
        style="@style/create_dilemma_btns"
        android:layout_marginBottom="1dp"
        android:text="@string/btn_several_variants_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintTop_toTopOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:layout_width="210dp"
        android:layout_height="4dp"
        android:background="@drawable/divider_line"
        app:layout_constraintBottom_toTopOf="@+id/btn_createDilemma_text"
        app:layout_constraintEnd_toEndOf="@+id/btn_createDilemma_severalVariants"
        app:layout_constraintStart_toStartOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintTop_toBottomOf="@+id/btn_createDilemma_severalVariants" />

    <Button
        android:id="@+id/btn_createDilemma_image"
        style="@style/create_dilemma_btns"
        android:layout_marginTop="8dp"
        android:text="@string/btn_image_text"
        app:layout_constraintBottom_toBottomOf="@+id/btn_createDilemma_text"
        app:layout_constraintEnd_toEndOf="@+id/btn_createDilemma_severalVariants"
        app:layout_constraintStart_toEndOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintTop_toBottomOf="@+id/btn_createDilemma_severalVariants" />

    <Button
        android:id="@+id/btn_createDilemma_text"
        style="@style/create_dilemma_btns"
        android:layout_marginTop="8dp"
        android:text="@string/btn_text_text"
        app:layout_constraintEnd_toEndOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintStart_toStartOf="@+id/btn_createDilemma_yesno"
        app:layout_constraintTop_toBottomOf="@+id/btn_createDilemma_yesno" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conteiner_createDilemma"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/rounded_corner_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_createDilemma_text"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image_text"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/et_createDilemma_comment"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="107dp"
        android:background="@drawable/rounded_text"
        android:hint="@string/add_comment"
        android:paddingStart="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conteiner_createDilemma"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <ImageButton
        android:id="@+id/btn_createDilemma_keyboard"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="5dp"
        android:scaleType="center"
        android:src="@mipmap/ic_btn_keyboard"
        app:layout_constraintBottom_toBottomOf="@+id/et_createDilemma_comment"
        app:layout_constraintEnd_toEndOf="@+id/et_createDilemma_comment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_createDilemma_comment"
        app:layout_constraintTop_toTopOf="@+id/et_createDilemma_comment"
        android:contentDescription="@string/btn_keyboard_description" />

    <Button
        android:id="@+id/btn_createDilemma_publish"
        android:layout_width="150dp"
        android:layout_height="42dp"
        style="@style/create_dilemma_btns"
        android:text="@string/publish_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_createDilemma_comment" />


</androidx.constraintlayout.widget.ConstraintLayout>