<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:paddingBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/btnProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnHome"
        style="@style/main_buttons"
        android:layout_marginStart="45dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/home"/>

    <ImageButton
        android:id="@+id/btnProfile"
        style="@style/main_buttons"
        android:layout_marginStart="165dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/profile"/>

    <ImageButton
        android:id="@+id/btnSetting"
        style="@style/main_buttons"
        android:layout_marginStart="285dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="5dp"
        android:src="@mipmap/ic_btn_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/settings"/>

</androidx.constraintlayout.widget.ConstraintLayout>